# l5eRiZJq0qpAJ0N3zqBS

./: main.py  pyproject.toml
Notebooks/: Notebook1.ipynb
lab_exam/: medical_tfidf_vectorizer.py
resources/: health_topics.pickle  medical_tests.pickle
utilis/: hide_toolbar.py  translator.py
