[tool.poetry]
name = "foobar"
version = "0.1.0"
description = ""
authors = ["Mohamed MKAOUAR <mohamed_mkaouar@carrefour.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.1.2"


[[tool.poetry.source]]
name = "pypi-simple"
url = "https://pypi.org/simple/"
default = true
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
